--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "gsap": "^3.12.5",
     "instantsearch.css": "^8.1.0",
+    "mitt": "^3.0.1",
     "pinia": "^2.0.36",
     "sql.js": "^1.9.0",
     "sqlite3": "^5.1.6",
