--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "copy music.db dist\\ && copy 404.html dist\\ && gh-pages -d dist"
   },
   "dependencies": {
     "@splidejs/splide": "^4.1.4",
@@ -21,17 +21,13 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
-    "cli-table": "^0.3.11",
     "express": "^4.18.2",
-    "gsap": "^3.12.5",
-    "instantsearch.css": "^8.1.0",
     "mitt": "^3.0.1",
     "pinia": "^2.0.36",
     "sql.js": "^1.9.0",
     "sqlite3": "^5.1.6",
     "sweetalert2": "^11.7.12",
     "vue": "^3.4.27",
-    "vue-instantsearch": "^4.13.5",
     "vue-lazyload": "^3.0.0",
     "vue-router": "^4.2.0",
     "vue3-toastify": "^0.2.1"
