--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@splidejs/vue-splide": "^0.6.12",
+    "@supabase/supabase-js": "^2.44.4",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
